# SOFA

applications/tutorials/anatomyModelling/: CMakeLists.txt
cmake/: SOFAConfig.cmake.in  UseSOFA.cmake  buildFlags.cmake  environment.cmake  functions.cmake  installExternalLibraries.cmake  options.cmake  postBuildConfig.cmake  postMainSolution.cmake  preSolution.cmake
framework/sofa/helper/: CMakeLists.txt
